# turtlebot3_mecanum

./: Model_Tb3_mecanum.mlx  Model_Tb3_mecanum2.mlx  README.md
ROS_packages/turtlebot3_mecanum_description/: CMakeLists.txt  package.xml
ROS_packages/turtlebot3_mecanum_description/launch/: gazebo_model.launch  view_model_rviz.launch
ROS_packages/turtlebot3_mecanum_description/rviz/: view_model.rviz
ROS_packages/turtlebot3_mecanum_description/urdf/: turtlebot3_mecanum.urdf.xacro
ROS_packages/turtlebot3_mecanum_navigation/: package.xml
ROS_packages/turtlebot3_mecanum_navigation/config/: carrot_planner_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  pot_field_planner_params.yaml  rrt_star_planner_params.yaml
ROS_packages/turtlebot3_mecanum_navigation/launch/: move_base.launch
ROS_packages/turtlebot3_mecanum_navigation/map/: map_karto.yaml  real_map.yaml  real_map2.pgm  real_map2.yaml
ROS_packages/turtlebot3_mecanum_navigation/rviz/: navigation_base_rviz.rviz  navigation_carrot_rviz.rviz  navigation_dwa_rviz.rviz  navigation_global_rviz.rviz  navigation_rrt_rviz.rviz  navigation_rviz.rviz
ROS_packages/turtlebot3_mecanum_slam/: CMakeLists.txt  package.xml
ROS_packages/turtlebot3_mecanum_slam/config/: karto_mapper_params.yaml
ROS_packages/turtlebot3_mecanum_slam/launch/: gmapping_slam.launch  karto_slam.launch
ROS_packages/turtlebot3_mecanum_slam/map/: map1.yaml  map2.pgm  map3.pgm  map4.pgm  map5.pgm  map5.yaml
ROS_packages/turtlebot3_msgs/: CMakeLists.txt
arduino/turtlebot3_core/: turtlebot3_core.ino  turtlebot3_core_config.h  turtlebot3_waffle.h
arduino/turtlebot3_core/src/: TurtleBot3Mecanum.h
error_fixes/: fix_compile_problem_serial.txt  fix_msg_larger_buffer.txt
fixes/: ArduinoHardware.h  node_handle.h
opencr_update/: turtlebot3_mecanum.opencr
turtlebot3_mecanum/turtlebot3_mecanum/: CMakeLists.txt  package.xml
turtlebot3_mecanum/turtlebot3_mecanum_bringup/: CMakeLists.txt  package.xml
turtlebot3_mecanum/turtlebot3_mecanum_bringup/launch/: turtlebot3_core.launch  turtlebot3_mecanum_robot.launch
turtlebot3_mecanum/turtlebot3_mecanum_bringup/src/: turtlebot3_diagnostics.cpp
turtlebot3_mecanum/turtlebot3_mecanum_description/: CMakeLists.txt
turtlebot3_mecanum/turtlebot3_mecanum_description/launch/: view_model_rviz.launch
turtlebot3_mecanum/turtlebot3_mecanum_description/urdf/: turtlebot3_mecanum.gazebo.xacro  turtlebot3_mecanum.urdf.xacro
turtlebot3_mecanum/turtlebot3_mecanum_navigation/: CMakeLists.txt
turtlebot3_mecanum/turtlebot3_mecanum_navigation/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  rrt_planner_params.yaml
turtlebot3_mecanum/turtlebot3_mecanum_navigation/launch/: amcl_localization.launch  (+2 more)
turtlebot3_mecanum_core/: library.properties
turtlebot3_mecanum_core/src/: TurtleBot3Mecanum.h
turtlebot3_msgs/: CMakeLists.txt  package.xml
turtlebot3_msgs/msg/: SensorStateMecanum.msg
turtlebot3_msgs_mecanum/: SensorStateMecanum.msg
(+32 files in other folders)
