<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_mecanum</name>
  <version>1.2.5</version>
  <description>
    ROS packages for the Turtlebot3 Mecanum (meta package)
  </description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rbccps01@todo.todo">rbccps01</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_mecanum_bringup</exec_depend>
  <exec_depend>turtlebot3_mecanum_description</exec_depend>
  <exec_depend>turtlebot3_mecanum_navigation</exec_depend>
  <exec_depend>turtlebot3_mecanum_slam</exec_depend>
  <export><metapackage/></export>
</package>
